feat(*):Fixed bugs, add some new features，cache total recycle
