# docs/swagger.yaml
@@ -611,10 +611,10 @@ definitions:
         description: Total amount of coins created
         type: string
       rewardCoinCount:
-        description: Total Number of times to get coin rewards, 0.1ERB once
+        description: Total number of times to get coin rewards, 0.1ERB once
         type: integer
       rewardSNFTCount:
-        description: Total Number of times to get SNFT rewards
+        description: Total number of times to get SNFT rewards
         type: integer
       totalAccount:
         description: Total account number
@@ -642,6 +642,9 @@ definitions:
         type: integer
       totalNFTTx:
         description: Total number of  NFT transactions
+        type: integer
+      totalRecycle:
+        description: Total number of recycle SNFT
         type: integer
       totalSNFT:
         description: Total number of SNFTs
@@ -749,6 +752,27 @@ definitions:
       total:
         description: Total number of exchanges
         type: integer
+    type: object
+  service.LineChartRes:
+    properties:
+      blocks:
+        items:
+          properties:
+            number:
+              type: integer
+            txCount:
+              type: integer
+          type: object
+        type: array
+      txs:
+        items:
+          properties:
+            gasPrice:
+              type: integer
+            hash:
+              type: string
+          type: object
+        type: array
     type: object
   service.Log:
     properties:
@@ -1512,6 +1536,30 @@ paths:
       summary: query transaction list (new /transaction/page)
       tags:
       - obsolete interface
+  /chart/line:
+    get:
+      consumes:
+      - application/json
+      description: query charts
+      parameters:
+      - description: Limit, default 10
+        in: query
+        name: limit
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/service.LineChartRes'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/service.ErrRes'
+      summary: query charts
+      tags:
+      - chart
   /collection/{id}:
     get:
       consumes:
